=========
CHANGELOG
=========
    
OFFLINE VERSION TESTED ON:
=========================
    - Mageia 4, 6
    - Xubuntu 15.04, 15.10 (32 and 64 bits), 16.04
    - Windows 7, 8.1, 10

    
September 20 2017, Release version 1.3.0 [OFFLINE]
========================================
  The new API of the EUFAR website has been implemented in ASMM. The user has now the possibility to select a project from the Project acronym textbox, the function will then fill in different fields automatically. Obviously, a connection to the internet is mandatory to use the new feature.
    
  ADDED:
    - a logging system has been introduced (finally !).
    - xml code for the operator country, aircraft manufacturer and aircraft registration number has been added to the ASMM xml file to expand querry possibilities in a database.
    - a new function to retrieve data from EUFAR database has been put in place.
    - the arcraft and operators are now updated automatically based on EUFAR database.
    - a new popup panel has been added to inform all users of the different modifications induced by the integration of the new API.
    - an autocompleter system has been introduced based on project acronym.
    - a .ini file has been introduced to handle logging options and the news API information window. It will be used for future options.
    
  MODIFIED:
    - the list of countries has been modified to reflect the ISO 3166-1 list with alpha-2 codes.
    - the functions to read, write, print and check xml code have been modified to take into account the new API, the new operators/aircraft object and the new country list.
    - until now xml file was set on "modified" if a new checkbox is created, now it is set on "modified" if the state of the new checkbox changes.
    - the aircraft selection system has been modified to handle the JSON aircraft object.