@@ -1,7 +1,7 @@
 # asmm-eufar
 
 A detailed changelog can be found in the Documentation directory. Stand-alone versions for Windows and Linux can be found in the Stand-alone versions directory.
-Current version: 1.3.0
+Current version: 1.3.1
 
 Overview
 
